ecmascript/parser/tests/test262-error-references/fail/e82474d52b99f1b7.js.stderr
error: Expected {, got numeric literal
 --> $DIR/tests/test262-parser/fail/e82474d52b99f1b7.js:1:14
  |
1 | function a() 1 // expression closure is not supported
  |              ^

